# untangle

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  default.nix  deny.toml  flake.nix  package.nix
.config/: nextest.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
benches/: graph_bench.rs  parse_bench.rs
docs/: book.toml
docs/specs/: architecture-view-parity.md  crap.md  scrap_plan.md  untangle-api-v2.md  untangle-design.md  untangle-requirements.md
docs/src/: SUMMARY.md  architecture.md  installation.md  introduction.md  quickstart.md  troubleshooting.md  why.md
scripts/: gen_diff_fixture.sh
src/: analysis_context.rs  analysis_report.rs  config.rs  errors.rs  formats.rs  git.rs  insights.rs  main.rs  service_graph.rs  walk.rs
src/architecture/: mod.rs  policy.rs
src/cli/: analyze.rs  architecture.rs  architecture_check.rs  architecture_init.rs  common.rs  config.rs  diff.rs  graph.rs  mod.rs  quality.rs  service_graph.rs
src/config/: ignore.rs  mod.rs  overrides.rs  provenance.rs  resolve.rs  schema.rs  show.rs
src/graph/: builder.rs  diff.rs  ir.rs  load.rs  mod.rs
src/metrics/: depth.rs  entropy.rs  fanout.rs  mod.rs  scc.rs  summary.rs
src/output/: dot.rs  json.rs  mod.rs  sarif.rs  text.rs
src/parse/: common.rs  factory.rs  go.rs  graphql.rs  graphql_client.rs  mod.rs  openapi.rs  python.rs  resolver.rs  rest_client.rs  ruby.rs  rust.rs
src/quality/: engine.rs  functions.rs  mod.rs  report.rs  untangle.rs
src/spec_quality/: mod.rs
tests/: cli_bdd.rs  integration.rs  proptest.rs  quality_bdd.rs
tests/integration/: analyze_test.rs  architecture_policy_test.rs  architecture_test.rs  ci_exit_codes_test.rs  config_test.rs  diff_test.rs  polyglot_test.rs  quality_report_test.rs  quality_test.rs  rust_workspace_test.rs  (+2 more)
(+126 files in other folders)
